Adds all the required functionality

--- a/base/templates/base/add_profile.html
+++ b/base/templates/base/add_profile.html
@@ -1,13 +1,13 @@
 {% extends 'base/index.html' %}
 {% load crispy_forms_tags %}
 {% block title %}
-Add Task
+Add Profile
 {% endblock %}
 {% block content %}
 <div class="card p-5" style="border-radius:10px;">
     <div class="card container col-lg-4 col-sm-12 p-4 mt-4 mb-4">
         <div class="d-flex justify-content-between mb-4">
-            <h3 class="text-secondary">Set Task</h3>
+            <h3 class="text-secondary">Add Profile</h3>
             <a href="{% url 'home' %}" class="btn btn-danger ">Close</a>
         </div>
         <form action="" method="POST">
@@ -16,6 +16,5 @@ Add Task
             <input type="submit" class="btn btn-primary mt-4 col-12" value="Submit" />
         </form>
     </div>
-
 </div>
 {% endblock %}
