--- a/base/templates/base/signup.html
+++ b/base/templates/base/signup.html
@@ -1,7 +1,7 @@
 {% extends 'base/index.html' %}
 {% load crispy_forms_tags %}
 {% block titile %}
-Signup
+Sign Up
 {% endblock %}
 {% block content %}
 <div class="card container col-lg-4 col-sm-12 p-4 mt-4 mb-4" style="border-radius: 10px;">
